--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,12 @@
 		}
 	],
 	"require" : {
-		"cakephp/cakephp" : "^3"
+		"cakephp/cakephp" : "^3",
+		"ext-mbstring" : "*"
 	},
 	"autoload" : {
 		"psr-4" : {
-			"Social\\" : "src"
+			"Slug\\" : "src"
 		}
 	},
 	"minimum-stability" : "dev"
